# JackettProwlarrClient

./: .gitignore  build.gradle.kts  spec.md
.github/workflows/: build-shielded.yml  build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libtlsclient.h  native-lib.cpp
app/src/main/go/tlsclient/: go.mod  tlsclient.go
app/src/main/java/com/aggregatorx/app/: AggregatorXApp.kt
app/src/main/java/com/aggregatorx/app/data/database/: Daos.kt
app/src/main/java/com/aggregatorx/app/data/memory/: ProviderMemoryDatabase.kt  ProviderMemoryEntities.kt  ProviderMemoryStore.kt
app/src/main/java/com/aggregatorx/app/data/model/: Models.kt
app/src/main/java/com/aggregatorx/app/data/repository/: AggregatorRepository.kt
app/src/main/java/com/aggregatorx/app/di/: EngineModule.kt  NetworkModule.kt
app/src/main/java/com/aggregatorx/app/engine/analyzer/: SiteAnalyzerEngine.kt
app/src/main/java/com/aggregatorx/app/engine/media/: AdvancedVideoExtractorEngine.kt  DownloadManager.kt  VideoExtractorEngine.kt
app/src/main/java/com/aggregatorx/app/engine/ml/: AnalysisHelper.kt  AnalysisModels.kt  LlamaModelManager.kt  LlamaRuntime.kt  LlamaService.kt  ModelDownloadManager.kt  ProviderPaginationManager.kt  ResultNormalizer.kt
app/src/main/java/com/aggregatorx/app/engine/network/: CloudflareBypassEngine.kt  NetworkFetcher.kt  TlsClient.kt  TlsFingerprintEngine.kt
app/src/main/java/com/aggregatorx/app/ui/: MainActivity.kt  VideoPlayerActivity.kt  WebViewActivity.kt
scripts/: build_tlsclient_android.sh
(+8 files in other folders)
